<resources>
    <string name="app_name">Pokedex</string>
    <string name="team_builder">Team Builder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_or_number">Enter name or number</string>
    <string name="all_types">All types</string>
    <string name="species">Species</string>
    <string name="abilities">Abilities</string>
    <string name="base_stats">Base Stats</string>
    <string name="evolution_chain">Evolution Chain</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enter_name">Enter name</string>
    <string name="title_alert_dialog">Repeated pokemon</string>
    <string name="message_alert_dialog">A team cannot contain duplicate pokemons.</string>
    <string name="positive_button_alert_dialog">Ok</string>
</resources>