<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallPokemonFragment"
    android:orientation="vertical"
    android:id="@+id/llyFragmentDetallPokemon"
    android:padding="5dp">

    <include android:id="@+id/llyPokemon"
        layout="@layout/fitxa_pokemon_pokedex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capseta_detall"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView android:id="@+id/txvDescriptionPokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/capseta_fila_pokemon_types"
                android:backgroundTint="@color/light_gray"
                android:textAlignment="center"
                android:text="It lives along water in forests. In the daytime, it leaves the forest to sunbathe its treed shell."/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/txvHeightPokemon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/capseta_fila_pokemon_types"
                    android:backgroundTint="@color/light_gray"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="3'7&#34; (1.09 m)" />

                <TextView android:id="@+id/txvWeightPokemon"
                    android:background="@drawable/capseta_fila_pokemon_types"
                    android:backgroundTint="@color/light_gray"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="213.85 lbs (97.0 kg)"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:gravity="center"
                    android:textColor="@color/gray"/>

                <TextView
                    android:background="@drawable/capseta_capsa_types"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:gravity="center"
                    android:textColor="@color/gray"/>

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abilities"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="20dp" />

        <LinearLayout android:id="@+id/llyAbilitiesPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capseta_detall"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/capseta_fila_pokemon_pokedex"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="add"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="Overgrow"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/capseta_fila_pokemon_types"
                android:backgroundTint="@color/gray"
                android:padding="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/capseta_abilities_hidden"
                    android:backgroundTint="@color/gray"
                    android:paddingVertical="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="Hidden" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:text="Shell Armore" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_stats"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capseta_detall"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView android:id="@+id/txvBaseStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_stats"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="@drawable/capseta_fila_pokemon_pokedex"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="add"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/capseta_fila_pokemon_types"
                    android:backgroundTint="@color/gray"
                    android:backgroundTintMode="add"
                    android:padding="0dp">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/capseta_abilities_hidden"
                        android:backgroundTint="@color/gray"
                        android:paddingVertical="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"
                        android:text="HP"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:text="75"
                        android:paddingRight="15dp"/>


                </RelativeLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="25"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TOTAL"
                    android:textSize="16dp"
                    android:paddingRight="7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="405"
                    android:textSize="16dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evolution_chain"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capseta_detall"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>